--- a/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part1_gradle_init_plugin.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part1_gradle_init_plugin.adoc
@@ -22,7 +22,7 @@ Learn the basics of developing Gradle plugins starting with `gradle init`.
 
 - Initialize a Gradle plugin project with `gradle init`.
 - Review the generated project structure and files.
-- Understand the "Hello, World" plugin that was automatically created for you.
+- Understand the "Hello, World" plugin that was generated.
 - Get a clear picture of the Slack Notification plugin we're going to build.
 - Set up the necessary Slack Client API credentials.
 ****
@@ -49,7 +49,7 @@ $ cd plugin-tutorial
 ----
 
 Now, run the `gradle init` command to automatically generate a basic plugin project.
-You can specify the language you want.
+You can build this plugin in either Groovy or Kotlin:
 
 [.multi-language-sample]
 =====
@@ -105,7 +105,7 @@ The project should look like this:
                     └── PluginTutorialPluginFunctionalTest.kt
 ----
 <1> This folder holds the wrapper files that allow us to run Gradle without a local installation.
-<2> This is a **version catalog**, a tool for managing all your project's dependencies in one place.
+<2> This is a version catalog, a tool for managing all your project's dependencies in one place.
 <3> These are the Gradle wrapper scripts for macOS/Linux and Windows.
 <4> This file defines the name of our build and includes our `plugin` subproject.
 <5> The build script for our `plugin` subproject. This is where we'll add our dependencies and configure the plugin.
@@ -141,7 +141,7 @@ The project should look like this:
                     └── PluginTutorialPluginFunctionalTest.groovy
 ----
 <1> This folder holds the wrapper files that allow us to run Gradle without a local installation.
-<2> This is a **version catalog**, a tool for managing all your project's dependencies in one place.
+<2> This is a version catalog, a tool for managing all your project's dependencies in one place.
 <3> These are the Gradle wrapper scripts for macOS/Linux and Windows.
 <4> This file defines the name of our build and includes our `plugin` subproject.
 <5> The build script for our `plugin` subproject. This is where we'll add our dependencies and configure the plugin.
@@ -161,7 +161,7 @@ When you're writing a plugin, you'll use the `java-gradle-plugin` to:
 2.  Add plugin development conventions and tasks.
 3.  Simplify the publishing process.
 
-This is what the `gradlePlugin {}` block looks like:
+This is what the `gradlePlugin {}` and `plugins {}` block looks like:
 
 ====
 include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/build.gradle.kts[tags=plugin-init]"]
@@ -169,7 +169,7 @@ include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/buil
 ====
 
 * `gradlePlugin {}`: This is where you configure the plugins you're authoring.
-* `val greeting by plugins.creating { ... }`: This registers a new plugin definition with the ID `org.example.greeting`.
+* `val greeting by plugins.creating {}` or `plugins.greeting {}`: This registers a new plugin definition with the ID `org.example.greeting`.
 * `implementationClass = "org.example.PluginTutorialPlugin"`: This points to the main class that contains your plugin's logic.
 
 == Step 4: Review the Plugin Code
@@ -214,7 +214,8 @@ Hello from plugin 'org.example.greeting'
 
 == Step 6: What we will Build
 
-This tutorial will guide you in building a powerful **Slack Notification Gradle Plugin**. This plugin will make it easy to automatically report your build results to a Slack channel.
+This tutorial will guide you in building a powerful **Slack Notification Gradle Plugin**.
+This plugin will make it easy to automatically report your build results to a Slack channel.
 
 The finished plugin will be able to:
 
@@ -226,7 +227,9 @@ The finished plugin will be able to:
 
 To get started, you'll need to set up the Slack API Client.
 
-1.  **Get a Slack Account and Workspace**: If you don't have one, create a link:https://slack.com/help/articles/218080037-Getting-started-for-new-Slack-users[Slack Account] and a link:https://slack.com/help/articles/206845317-Create-a-Slack-workspace[Slack Workspace] where you have administrative privileges.
+1.  **Get a Slack Account and Workspace**:
+* Create a link:https://slack.com/help/articles/218080037-Getting-started-for-new-Slack-users[Slack Account].
+* Create a link:https://slack.com/help/articles/206845317-Create-a-Slack-workspace[Slack Workspace] where you have administrative privileges.
 
 2.  **Create a Slack App**:
 * Navigate to the link:https://api.slack.com/apps[Slack App creation page].
