--- a/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part4_unit_test.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part4_unit_test.adoc
@@ -15,71 +15,67 @@
 [[part4_unit_test]]
 = Part 4: Writing a Unit Test
 
-Learn the basics of unit testing your plugin.
+Learn the basics of unit testing your plugin to ensure it behaves as expected.
 
 ****
-**In this section, you will:**
+**In this section, you'll:**
 
-- Write a Unit Test for your plugin
-- Run a Unit Test to test your plugin
+- Update the default unit test to verify your plugin's functionality.
+- Run the unit tests to confirm your plugin registers its task correctly.
 ****
 
 [[part4_begin]]
-== Step 0. Before you Begin
+== Step 0: Before you Begin
 
 1. You initialized your plugin in <<part1_gradle_init_plugin.adoc#part1_begin,part 1>>.
 2. You added an extension to your plugin in <<part2_add_extension.adoc#part2_begin,part 2>>.
-3. You created a custom task in <<part3_create_custom_task.adoc#part3_begin, part3>>.
+3. You created a custom task in <<part3_create_custom_task.adoc#part3_begin,part 3>>.
 
-== Step 1. About Unit Tests
+== Step 1: About Unit Tests
 
-Grade init provides a sample unit test that we can reuse.
-[.multi-language-text.lang-kotlin]
-----
-It is available in `src/test/kotlin/org/example/PluginTutorialPluginTest.kt`.
-----
-[.multi-language-text.lang-groovy]
-----
-It is available in `src/test/groovy/org/example/PluginTutorialPluginTest.groovy`.
-----
-Let's take a look:
-
-====
-include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/src/test/kotlin/org/example/PluginTutorialPluginTest.kt[tags=init-test]"]
-include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/src/test/groovy/org/example/PluginTutorialPluginTest.groovy[tags=init-test]"]
-====
-
-It is quite simple, it applies the `org.example.greeting` plugin and verifies that the `greeting` task is available.
-
-== Step 2. Update the Test
+Gradle `init` creates a sample unit test to get you started.
 
 [.multi-language-text.lang-kotlin]
 ----
-First, update the name of the file from `PluginTutorialPluginTest.kt` to `SlackPluginTest.kt`.
+It's located in `src/test/kotlin/org/example/PluginTutorialPluginTest.kt`.
 ----
 [.multi-language-text.lang-groovy]
 ----
-First, update the name of the file from `PluginTutorialPluginTest.groovy` to `SlackPluginTest.groovy`.
+It's located in `src/test/groovy/org/example/PluginTutorialPluginTest.groovy`.
 ----
 
-Second, update your test so it looks as follows:
+The original test is simple, it applies the default `org.example.greeting` plugin and verifies that the `greeting` task is available.
+We will update it to test our new plugin.
+
+== Step 2: Update the Test
+
+First, let's rename the test file to match our plugin's name.
+
+[.multi-language-text.lang-kotlin]
+----
+Rename the file `PluginTutorialPluginTest.kt` to `SlackPluginTest.kt`.
+----
+[.multi-language-text.lang-groovy]
+----
+Rename the file `PluginTutorialPluginTest.groovy` to `SlackPluginTest.groovy`.
+----
+
+Next, update the code to reflect our plugin's ID (`org.example.slack`) and task name (`sendTestSlackMessage`).
 
 ====
 include::sample[dir="snippets/plugins/plugin-tutorial/kotlin",files="plugin/src/test/kotlin/org/example/SlackPluginTest.kt[]"]
 include::sample[dir="snippets/plugins/plugin-tutorial/groovy",files="plugin/src/test/groovy/org/example/SlackPluginTest.groovy[]"]
 ====
 
-We are essentially re-using the unit test from Gradle init as-is.
+This test:
 
-This test creates a fake Gradle project in memory, applies the plugin, and checks that it registered the `sendTestSlackMessage` task.
+1.  **`ProjectBuilder.builder().build()`**: Creates an in-memory test project, which is perfect for isolating our plugin's behavior.
+2.  **`project.plugins.apply(...)`**: Applies our `SlackPlugin` to the test project.
+3.  **`assertNotNull(...)`**: Confirms that our `sendTestSlackMessage` task was successfully registered by the plugin.
 
-1. **`ProjectBuilder.builder().build()`** - makes a test project (no files, no real build).
-2. **`project.plugins.apply(...)`** - applies your plugin to it.
-3. **`assertNotNull(...)`** - confirms the task exists after the plugin is applied.
+== Step 3: Run the Test
 
-== Step 3. Run the Test
-
-Then, you can run the `test` task and ensure it passes.
+You can now run the `test` task from the command line to make sure everything is working correctly.
 
 [source,text]
 ----
@@ -103,7 +99,7 @@ BUILD SUCCESSFUL in 1s
 7 actionable tasks: 2 executed, 5 up-to-date
 ----
 
-You can optionally add another test or change the existing test to get it to fail.
+If your test passes, you've successfully verified that your plugin is registering its custom task as intended!
 
 [.text-right]
-**Next Step:** <<part5_add_dataflow_action#part5_add_dataflow_action,Add a DataFlow Action>> >>
+**Next Step:** <<part5_add_dataflow_action.adoc#part5_add_dataflow_action,Add a DataFlow Action>> >>
