add exceptions and new anchors for config cache and licences

--- a/platforms/documentation/docs/src/docs/userguide/optimizing-builds/configuration-cache/configuration_cache_enabling.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/optimizing-builds/configuration-cache/configuration_cache_enabling.adoc
@@ -14,7 +14,7 @@
 
 :gradle-issues: https://github.com/gradle/gradle/issues/
 
-[[config_cache_enabling]]
+[[config_cache:usage]]
 = Enabling and Configuring the Configuration Cache
 
 [[config_cache:usage:enable]]
