--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -46,6 +46,48 @@ The previous step will help you identify potential problems by issuing deprecati
 The incubating `ObjectFactory#dependencyCollector()` method has been removed.
 DependencyCollectors can still be instantiated within Gradle <<properties_providers.adoc#managed_types, managed types>>.
 
+==== Consumable configurations are initialized lazily
+
+Consumable configurations created by all bundled Gradle plugins are now initialized lazily.
+Configure actions applied to consumable configurations created by Gradle will no longer be executed unless that configuration is published, consumed as a variant, or otherwise realized by build logic.
+
+Consider the following example:
+
+.build.gradle.kts
+[source,kotlin]
+----
+plugins {
+    id("java-library")
+}
+
+configurations.named("apiElements").configure {
+    println("Configuring apiElements")
+}
+----
+
+The `Configuring apiElements` line will no longer be executed during configuration-time by default.
+Instead, the configuration will only be realized and initialized if it is needed.
+
+To leverage this new laziness, avoid APIs that eagerly realize configurations:
+
+.build.gradle.kts
+[source,kotlin]
+----
+// Instead of
+configurations.all {} // Eagerly realizes all configurations
+
+// Use
+configurations.confgureEach {} // Only called for realized configurations
+
+// Instead of
+configurations.getByName("name").doSomething() // Eagerly realizes the "name" configuration
+
+// Use
+configurations.named("name").configure {
+    doSomething() // Only called if "name" configuration is realized
+}
+----
+
 === Deprecations
 
 [[dependency_management_rules]]
